--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+h1, h2, h3 {
+  line-height: 1.2;
+}
 body {
+  color:#444;
   font-family: sans-serif;
-  text-align: center;
+  line-height: 1.6;
   padding-left: 20%;
   padding-right: 20%;
+  text-align: center;
 }
 P {
   text-align: justify;
